--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a class="active" href="main.html">Home</a>
       <a href="news.html">News</a>
       <a href="contact.html">Contact</a>
-      <a href="bonplans.html">Bon Plans</a>
+      <a href="bonplans.html">Bon Plan</a>
       <a href="antiarnaque.html">Antpirate</a>
     </div>
     
