--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
     <body id="backs">
         <div class="topnav">
             
-            <a href="main.html">Home</a>
+            <a href="index.html">Home</a>
             <a class="active" href="news.html">News</a>
             <a href="contact.html">Contact</a>
             <a href="bonplans.html">Bon Plans</a>
