--- a/bonplans.html
+++ b/bonplans.html
@@ -17,7 +17,7 @@
             <a href="news.html">News</a>
             <a href="contact.html">Contact</a>
             <a class="active" href="bonplans.html">Bon Plans</a>
-            <a href="antiarnaque.html">Antpirate</a>
+            <a href="antiarnaque.html">Anti arnaque</a>
           </div>
         
         <script src="" async defer></script>
