--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <a href="news.html">News</a>
       <a class="active" href="contact.html">Contact</a>
       <a href="bonplans.html">Bon Plans</a>
-      <a href="antiarnaque.html">Antpirate</a>
+      <a href="antiarnaque.html">Anti Arnaque</a>
     </div>
     
     <script src="" async defer></script>
