--- a/bonplans.html
+++ b/bonplans.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body id="back">
+    <body id="backs">
         <div class="topnav">
             
             <a href="index.html">Home</a>
