--- a/Anime/main.html
+++ b/Anime/main.html
@@ -4,22 +4,21 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Les Arnaque</title>
-        <link rel="icon" href="image/iconpirate.png">
+        <title>Anime</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="">
     </head>
-    <body id="backs">
+    <body>
+        <h1>Anime du jour</h1>
         <div class="topnav">
             
             <a href="index.html">Games</a>
             <a href="news.html">News</a>
             <a href="contact.html">Contact</a>
             <a href="bonplans.html">Bon Plans</a>
-            <a class="active" href="antiarnaque.html">Anti Arnaque</a>
-            <a href="main.html">Animes</a>
+            <a href="antiarnaque.html">Anti Arnaque</a>
+            <a class="active" href="main.html">Animes</a>
         </div>
-        <script src="" async defer></script>
     </body>
 </html>
