--- a/Game/bonplans.html
+++ b/Game/bonplans.html
@@ -18,6 +18,7 @@
             <a href="contact.html">Contact</a>
             <a class="active" href="bonplans.html">Bon Plans</a>
             <a href="antiarnaque.html">Anti arnaque</a>
+            <a href="main.html">Animes</a>
           </div>
         
         <script src="" async defer></script>
