--- a/Game/index.html
+++ b/Game/index.html
@@ -18,6 +18,7 @@
       <a href="contact.html">Contact</a>
       <a href="bonplans.html">Bon Plans</a>
       <a href="antiarnaque.html">Anti pirate</a>
+      <a href="main.html">Animes</a>
     </div>
     
     <script src="" async defer></script>
