--- a/Game/news.html
+++ b/Game/news.html
@@ -18,6 +18,7 @@
             <a href="contact.html">Contact</a>
             <a href="bonplans.html">Bon Plans</a>
             <a href="antiarnaque.html">Antpirate</a>
+            <a href="main.html">Animes</a>
           </div>
         
         <script src="" async defer></script>
