--- a/Game/bonplans.html
+++ b/Game/bonplans.html
@@ -17,7 +17,7 @@
             <a href="news.html">News</a>
             <a href="contact.html">Contact</a>
             <a class="active" href="bonplans.html">Bon Plans</a>
-            <a href="antiarnaque.html">Anti arnaque</a>
+            <a href="antiarnaque.html">Anti Arnaque</a>
             <a href="main.html">Animes</a>
           </div>
         
