--- a/Game/index.html
+++ b/Game/index.html
@@ -17,7 +17,7 @@
       <a href="news.html">News</a>
       <a href="contact.html">Contact</a>
       <a href="bonplans.html">Bon Plans</a>
-      <a href="antiarnaque.html">Anti pirate</a>
+      <a href="antiarnaque.html">Anti Arnaque</a>
       <a href="main.html">Animes</a>
     </div>
     
