--- a/Game/antiarnaque.html
+++ b/Game/antiarnaque.html
@@ -14,11 +14,11 @@
         <div class="topnav">
             
             <a href="index.html">Games</a>
-            <a href="news.html">News</a>
-            <a href="contact.html">Contact</a>
-            <a href="bonplans.html">Bon Plans</a>
-            <a class="active" href="antiarnaque.html">Anti Arnaque</a>
-            <a href="main.html">Animes</a>
+            <a href="Game/news.html">News</a>
+            <a href="Game/contact.html">Contact</a>
+            <a href="Game/bonplans.html">Bon Plans</a>
+            <a class="active" href="Games/antiarnaque.html">Anti Arnaque</a>
+            <a href="Anime/main.html">Animes</a>
         </div>
         <script src="" async defer></script>
     </body>
