--- a/Game/contact.html
+++ b/Game/contact.html
@@ -14,11 +14,11 @@
     <div class="topnav">
             
       <a href="index.html">Home</a>
-      <a href="news.html">News</a>
-      <a class="active" href="contact.html">Contact</a>
-      <a href="bonplans.html">Bon Plans</a>
-      <a href="antiarnaque.html">Anti Arnaque</a>
-      <a href="main.html">Animes</a>
+      <a href="Game/news.html">News</a>
+      <a class="active" href="Game/contact.html">Contact</a>
+      <a href="Game/bonplans.html">Bon Plans</a>
+      <a href="Game/antiarnaque.html">Anti Arnaque</a>
+      <a href="Anime/main.html">Animes</a>
     </div>
     
     <script src="" async defer></script>
