--- a/Game/news.html
+++ b/Game/news.html
@@ -14,11 +14,11 @@
         <div class="topnav">
             
             <a href="index.html">Home</a>
-            <a class="active" href="news.html">News</a>
-            <a href="contact.html">Contact</a>
-            <a href="bonplans.html">Bon Plans</a>
-            <a href="antiarnaque.html">Anti Arnaque</a>
-            <a href="main.html">Animes</a>
+            <a class="active" href="Game/news.html">News</a>
+            <a href="Game/contact.html">Contact</a>
+            <a href="Game/bonplans.html">Bon Plans</a>
+            <a href="Game/antiarnaque.html">Anti Arnaque</a>
+            <a href="Anime/main.html">Animes</a>
           </div>
         
         <script src="" async defer></script>
