--- a/Anime/main.html
+++ b/Anime/main.html
@@ -13,12 +13,12 @@
         <h1>Anime du jour</h1>
         <div class="topnav">
             
-            <a href="index.html">Games</a>
-            <a href="Game/news.html">News</a>
-            <a href="Game/contact.html">Contact</a>
-            <a href="Game/bonplans.html">Bon Plans</a>
-            <a href="Game/antiarnaque.html">Anti Arnaque</a>
-            <a class="active" href="Anime/main.html">Animes</a>
+            <a href="/index.html">Games</a>
+            <a href="/Game/news.html">News</a>
+            <a href="/Game/contact.html">Contact</a>
+            <a href="/Game/bonplans.html">Bon Plans</a>
+            <a href="/Game/antiarnaque.html">Anti Arnaque</a>
+            <a class="active" href="/Anime/main.html">Animes</a>
         </div>
     </body>
 </html>
