--- a/Game/bonplans.html
+++ b/Game/bonplans.html
@@ -13,12 +13,12 @@
     <body id="backs">
         <div class="topnav">
             
-            <a href="index.html">Home</a>
-            <a href="Game/news.html">News</a>
-            <a href="Game/contact.html">Contact</a>
-            <a class="active" href="Game/bonplans.html">Bon Plans</a>
-            <a href="Game/antiarnaque.html">Anti Arnaque</a>
-            <a href="Anime/main.html">Animes</a>
+            <a href="/index.html">Home</a>
+            <a href="/Game/news.html">News</a>
+            <a href="/Game/contact.html">Contact</a>
+            <a class="active" href="/Game/bonplans.html">Bon Plans</a>
+            <a href="/Game/antiarnaque.html">Anti Arnaque</a>
+            <a href="/Anime/main.html">Animes</a>
           </div>
         
         <script src="" async defer></script>
