--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   </head>
   <body id="backs">
     <div class="topnav">
-      <a class="active" href="index.html">Home</a>
-      <a href="Game/news.html">News</a>
-      <a href="Game/contact.html">Contact</a>
-      <a href="Game/bonplans.html">Bon Plans</a>
-      <a href="Game/antiarnaque.html">Anti Arnaque</a>
-      <a href="Anime/main.html">Animes</a>
+      <a class="active" href="/index.html">Home</a>
+      <a href="/Game/news.html">News</a>
+      <a href="/Game/contact.html">Contact</a>
+      <a href="/Game/bonplans.html">Bon Plans</a>
+      <a href="/Game/antiarnaque.html">Anti Arnaque</a>
+      <a href="/Anime/main.html">Animes</a>
     </div>
     
     <script src="" async defer></script>
