--- a/Anime/main.html
+++ b/Anime/main.html
@@ -7,7 +7,7 @@
         <title>Anime</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <h1>Anime du jour</h1>
