--- a/Anime/main.html
+++ b/Anime/main.html
@@ -7,10 +7,14 @@
         <title>Anime</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/Anime/style2.css">
     </head>
     <body>
         <h1>Anime du jour</h1>
+
+
+
+        
         <div class="topnav">
             
             <a href="/index.html">Games</a>
