--- a/Game/antiarnaque.html
+++ b/Game/antiarnaque.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="image/iconpirate.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/Game/style3.css">
     </head>
     <body id="backs">
         <div class="topnav">
