--- a/Anime/main.html
+++ b/Anime/main.html
@@ -17,12 +17,12 @@
 
         <div class="topnav">
             
-            <a href="/index.html">Games</a>
-            <a href="/Game/news.html">News</a>
-            <a href="/Game/contact.html">Contact</a>
-            <a href="/Game/bonplans.html">Bon Plans</a>
-            <a href="/Game/antiarnaque.html">Anti Arnaque</a>
-            <a class="active" href="/Anime/main.html">Animes</a>
+            <a href="https://atsouky.github.io/index.html">Games</a>
+            <a href="https://atsouky.github.io/Game/news.html">News</a>
+            <a href="https://atsouky.github.io/Game/contact.html">Contact</a>
+            <a href="https://atsouky.github.io/Game/bonplans.html">Bon Plans</a>
+            <a href="https://atsouky.github.io/Game/antiarnaque.html">Anti Arnaque</a>
+            <a class="active" href="https://atsouky.github.io/Anime/main.html">Animes</a>
         </div>
     </body>
 </html>
