--- a/Anime/main.html
+++ b/Anime/main.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/Anime/style2.css">
     </head>
-    <body>
+    <body id="backs">
         <h1>Anime du jour</h1>
 
 
