--- a/Anime/main.html
+++ b/Anime/main.html
@@ -20,5 +20,6 @@
             <a class="active" href="https://atsouky.github.io/Anime/main.html">Animes</a>
         </div>
         <h1>Anime du jour</h1>
+        <img src="plan.png">
     </body>
 </html>
