--- a/Anime/main.html
+++ b/Anime/main.html
@@ -20,6 +20,6 @@
             <a class="active" href="https://atsouky.github.io/Anime/main.html">Animes</a>
         </div>
         <h1>Anime du jour</h1>
-        <img src="/image/plan.png">
+        <img src="/image/plan.png" width="50%">
     </body>
 </html>
