--- a/Anime/main.html
+++ b/Anime/main.html
@@ -19,7 +19,7 @@
             <a href="https://atsouky.github.io/Game/antiarnaque.html">Anti Arnaque</a>
             <a class="active" href="https://atsouky.github.io/Anime/main.html">Animes</a>
         </div>
-        <h1>Anime du jour</h1>
+        <h1>Anime Hebdo</h1>
         <img src="/image/plan.png" width="100%">
     </body>
 </html>
