--- a/Game/contact.html
+++ b/Game/contact.html
@@ -20,7 +20,7 @@
       <a href="/Game/antiarnaque.html">Anti Arnaque</a>
       <a href="/Anime/main.html">Animes</a>
     </div>
-    <h1>Pour nous Contacter</h1>
+    <h1 id="centre">Pour nous Contacter</h1>
     <p>Developper : Atsouky</p>
     <p>Projet ouvers au proposition : https://github.com/Atsouky/Atsouky.github.io</p>
   </body>
