--- a/Game/contact.html
+++ b/Game/contact.html
@@ -22,6 +22,6 @@
     </div>
     <h1 id="centre">Pour nous Contacter</h1>
     <p>Developper : Atsouky</p>
-    <p>Projet ouvers au proposition : https://github.com/Atsouky/Atsouky.github.io</p>
+    <a href="https://github.com/Atsouky/Atsouky.github.io">My GitHub<\a>
   </body>
 </html>
