--- a/Game/contact.html
+++ b/Game/contact.html
@@ -13,7 +13,7 @@
   <body id="backs">
     <div class="topnav">
             
-      <a href="/index.html">Home</a>
+      <a href="/index.html">Game</a>
       <a href="/Game/news.html">News</a>
       <a class="active" href="/Game/contact.html">Contact</a>
       <a href="/Game/bonplans.html">Bon Plans</a>
