--- a/Game/news.html
+++ b/Game/news.html
@@ -13,7 +13,7 @@
     <body id="backs">
         <div class="topnav">
             
-            <a href="/index.html">Home</a>
+            <a href="/index.html">Game</a>
             <a class="active" href="/Game/news.html">News</a>
             <a href="/Game/contact.html">Contact</a>
             <a href="/Game/bonplans.html">Bon Plans</a>
