--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body id="backs">
     <div class="topnav">
-      <a class="active" href="/index.html">Home</a>
+      <a class="active" href="/index.html">Game</a>
       <a href="/Game/news.html">News</a>
       <a href="/Game/contact.html">Contact</a>
       <a href="/Game/bonplans.html">Bon Plans</a>
