--- a/Game/contact.html
+++ b/Game/contact.html
@@ -21,7 +21,7 @@
       <a href="/Anime/main.html">Animes</a>
     </div>
     <h1 id="centre">Pour nous Contacter</h1>
-    <p>Developper : Atsouky</p>
-    <a href="https://github.com/Atsouky/Atsouky.github.io">My GitHub</a>
+    <p id="centre">Developper : Atsouky</p>
+    <a href="https://github.com/Atsouky/Atsouky.github.io",id="centre">My GitHub</a>
   </body>
 </html>
