--- a/Game/contact.html
+++ b/Game/contact.html
@@ -22,6 +22,6 @@
     </div>
     <h1 id="centre">Pour nous Contacter</h1>
     <p id="centre">Developper : Atsouky</p>
-    <a href="https://github.com/Atsouky/Atsouky.github.io",id="centre">My GitHub</a>
+    <a id="centre", href="https://github.com/Atsouky/Atsouky.github.io">My GitHub</a>
   </body>
 </html>
