--- a/Game/antiarnaque.html
+++ b/Game/antiarnaque.html
@@ -13,11 +13,11 @@
     <body id="backs">
         <div class="topnav">
             
-            <a href="/index.html">Games</a>
+            <a href="/index.html">Game</a>
             <a href="/Game/news.html">News</a>
             <a href="/Game/contact.html">Contact</a>
             <a href="/Game/bonplans.html">Bon Plans</a>
-            <a class="active" href="/Games/antiarnaque.html">Anti Arnaque</a>
+            <a class="active" href="/Game/antiarnaque.html">Anti Arnaque</a>
             <a href="/Anime/main.html">Animes</a>
         </div>
         <script src="" async defer></script>
