--- a/Game/contact.html
+++ b/Game/contact.html
@@ -23,5 +23,6 @@
     <h1 id="centre">Pour nous Contacter</h1>
     <p id="centre">Developper : Atsouky</p>
     <a id="centre", href="https://github.com/Atsouky/Atsouky.github.io">My GitHub</a>
+    <p>Mail : neko@gmail.com</p>
   </body>
 </html>
