--- a/Game/news.html
+++ b/Game/news.html
@@ -19,7 +19,8 @@
             <a href="/Game/bonplans.html">Bon Plans</a>
             <a href="/Game/antiarnaque.html">Anti Arnaque</a>
             <a href="/Anime/main.html">Animes</a>
-          </div>
+        </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/LGKKgEE8x18?si=uPUv0CUzlQiAfXon" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         
         <script src="" async defer></script>
     </body>
