--- a/Game/news.html
+++ b/Game/news.html
@@ -20,7 +20,10 @@
             <a href="/Game/antiarnaque.html">Anti Arnaque</a>
             <a href="/Anime/main.html">Animes</a>
         </div>
+        <div id="centre">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/LGKKgEE8x18?si=uPUv0CUzlQiAfXon" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/xp328ZuTAtY?si=4wFPhzGCcZ79YCzQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
         
         <script src="" async defer></script>
     </body>
