--- a/Game/antiarnaque.html
+++ b/Game/antiarnaque.html
@@ -20,6 +20,19 @@
             <a class="active" href="/Game/antiarnaque.html">Anti Arnaque</a>
             <a href="/Anime/main.html">Animes</a>
         </div>
+        <table>
+            
+            <tr>Escroquerie n° 1 : « credential stuffing »</tr>
+            <tr>[H2] Escroquerie n° 2 : les malwares</tr>
+            <tr>Escroquerie n° 3 : de faux codes de triche, bonus et améliorations d'équipement</tr>
+            <tr>Escroquerie n° 4 : fraude par phishing</tr>
+            <tr>Escroquerie n° 5 : les escroqueries aux appels internationaux</tr>
+            <tr>Escroquerie n° 6 : l'escroquerie vous promettant des téléchargements illimités, une offre trop belle pour être vraie</tr>
+            
+
+        </table>
+
+
         <script src="" async defer></script>
     </body>
 </html>
