--- a/Anime/main.html
+++ b/Anime/main.html
@@ -7,7 +7,7 @@
         <title>Anime</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/Anime/style3.css">
+        <link rel="stylesheet" href="/Game/style3.css">
     </head>
     <body id="backs">
         <div class="topnav">
