--- a/Game/antiarnaque.html
+++ b/Game/antiarnaque.html
@@ -23,12 +23,12 @@
         <div color: white  >
             <table>
             
-                <tr><td> n° 1 : « credential stuffing »</td></tr>
-                <tr><td>[H2] Escroquerie n° 2 : les malwares</td></tr>
-                <tr><td>Escroquerie n° 3 : de faux codes de triche, bonus et améliorations d'équipement</td></tr>
-                <tr><td>Escroquerie n° 4 : fraude par phishing</td></tr>
-                <tr><td>Escroquerie n° 5 : les escroqueries aux appels internationaux</td></tr>
-                <tr><td>Escroquerie n° 6 : l'escroquerie vous promettant des téléchargements illimités, une offre trop belle pour être vraie</td></tr>
+                <tr><td color: white> n° 1 : « credential stuffing »</td></tr>
+                <tr><td color: white>[H2] Escroquerie n° 2 : les malwares</td></tr>
+                <tr><td color: white>Escroquerie n° 3 : de faux codes de triche, bonus et améliorations d'équipement</td></tr>
+                <tr><td color: white>Escroquerie n° 4 : fraude par phishing</td></tr>
+                <tr><td color: white>Escroquerie n° 5 : les escroqueries aux appels internationaux</td></tr>
+                <tr><td color: white>Escroquerie n° 6 : l'escroquerie vous promettant des téléchargements illimités, une offre trop belle pour être vraie</td></tr>
                 
             </table>
         </div>
