--- a/Game/antiarnaque.html
+++ b/Game/antiarnaque.html
@@ -21,14 +21,14 @@
             <a href="/Anime/main.html">Animes</a>
         </div>
         <div color: white  >
-            <table>
+            <table color: white>
             
-                <tr><td color: white> n° 1 : « credential stuffing »</td></tr>
-                <tr><td color: white>[H2] Escroquerie n° 2 : les malwares</td></tr>
-                <tr><td color: white>Escroquerie n° 3 : de faux codes de triche, bonus et améliorations d'équipement</td></tr>
-                <tr><td color: white>Escroquerie n° 4 : fraude par phishing</td></tr>
-                <tr><td color: white>Escroquerie n° 5 : les escroqueries aux appels internationaux</td></tr>
-                <tr><td color: white>Escroquerie n° 6 : l'escroquerie vous promettant des téléchargements illimités, une offre trop belle pour être vraie</td></tr>
+                <tr color: white><td color: white> n° 1 : « credential stuffing »</td></tr>
+                <tr color: white><td color: white>[H2] Escroquerie n° 2 : les malwares</td></tr>
+                <tr color: white><td color: white>Escroquerie n° 3 : de faux codes de triche, bonus et améliorations d'équipement</td></tr>
+                <tr color: white><td color: white>Escroquerie n° 4 : fraude par phishing</td></tr>
+                <tr color: white><td color: white>Escroquerie n° 5 : les escroqueries aux appels internationaux</td></tr>
+                <tr color: white><td color: white>Escroquerie n° 6 : l'escroquerie vous promettant des téléchargements illimités, une offre trop belle pour être vraie</td></tr>
                 
             </table>
         </div>
