--- a/Game/antiarnaque.html
+++ b/Game/antiarnaque.html
@@ -23,7 +23,7 @@
         <div color: white  >
             <table color: white>
             
-                <tr style=color:#FFFFFF><td color: white>Escroquerie n° 1 : « credential stuffing »</td></tr>
+                <tr style=color:#FFFFFF>Escroquerie n° 1 :<td color: white> « credential stuffing »</td></tr>
                 <tr style=color:#FFFFFF><td color: white>Escroquerie n° 2 : les malwares</td></tr>
                 <tr style=color:#FFFFFF><td color: white>Escroquerie n° 3 : de faux codes de triche, bonus et améliorations d'équipement</td></tr>
                 <tr style=color:#FFFFFF><td color: white>Escroquerie n° 4 : fraude par phishing</td></tr>
