--- a/Game/antiarnaque.html
+++ b/Game/antiarnaque.html
@@ -20,15 +20,15 @@
             <a class="active" href="/Game/antiarnaque.html">Anti Arnaque</a>
             <a href="/Anime/main.html">Animes</a>
         </div>
-        <div style=color:#FFFFFF  >
-            <table style=color:#FFFFFF>
+        <div color: white  >
+            <table color: white>
             
-                <tr style=color:#FFFFFF>Escroquerie n° 1 :<td style=color:#FFFFFF> « credential stuffing »</td></tr>
-                <tr style=color:#FFFFFF>Escroquerie n° 2 :<td style=color:#FFFFFF> les malwares</td></tr>
-                <tr style=color:#FFFFFF>Escroquerie n° 3 :<td style=color:#FFFFFF> de faux codes de triche, bonus et améliorations d'équipement</td></tr>
-                <tr style=color:#FFFFFF>Escroquerie n° 4 :<td style=color:#FFFFFF> fraude par phishing</td></tr>
-                <tr style=color:#FFFFFF>Escroquerie n° 5 :<td style=color:#FFFFFF> les escroqueries aux appels internationaux</td></tr>
-                <tr style=color:#FFFFFF>Escroquerie n° 6 :<td style=color:#FFFFFF> l'escroquerie vous promettant des téléchargements illimités, une offre trop belle pour être vraie</td></tr>
+                <tr style=color:#FFFFFF><td color: white>Escroquerie n° 1 : « credential stuffing »</td></tr>
+                <tr style=color:#FFFFFF><td color: white>Escroquerie n° 2 : les malwares</td></tr>
+                <tr style=color:#FFFFFF><td color: white>Escroquerie n° 3 : de faux codes de triche, bonus et améliorations d'équipement</td></tr>
+                <tr style=color:#FFFFFF><td color: white>Escroquerie n° 4 : fraude par phishing</td></tr>
+                <tr style=color:#FFFFFF><td color: white>Escroquerie n° 5 : les escroqueries aux appels internationaux</td></tr>
+                <tr style=color:#FFFFFF><td color: white>Escroquerie n° 6 : l'escroquerie vous promettant des téléchargements illimités, une offre trop belle pour être vraie</td></tr>
                 
             </table>
         </div>
