--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="image/icongame.png">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="/Game/style3.css">
   </head>
   <body id="backs">
     <div class="topnav">
