--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/Game/style3.css">
   </head>
-  <body id="backs">
+  <body background="image/SL-093020-35920-01.jpg">
+    
     <div class="topnav">
       <a class="active" href="/index.html">Game</a>
       <a href="/Game/news.html">News</a>
@@ -20,7 +21,9 @@
       <a href="/Game/antiarnaque.html">Anti Arnaque</a>
       <a href="/Anime/main.html">Animes</a>
     </div>
-    
+    <h3>L'actu du Gaming</h3>
+
+
     <script src="" async defer></script>
   </body>
 </html>
