--- a/Game/contact.html
+++ b/Game/contact.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/Game/style3.css">
   </head>
-  <body id="backs">
+  <body  background="image/SL-093020-35920-01.jpg">
     <div class="topnav">
             
       <a href="/index.html">Game</a>
