--- a/Anime/main.html
+++ b/Anime/main.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/Game/style3.css">
     </head>
-    <body  background="image/SL-093020-35920-01.jpg">
+    <body id="backs">
         <div class="topnav">
             
             <a href="https://atsouky.github.io/index.html">Games</a>
