--- a/Game/bonplans.html
+++ b/Game/bonplans.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/Game/style3.css">
     </head>
-    <body id="backs">
+    <body ">
         <div class="topnav">
             
             <a href="/index.html">Game</a>
