--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/Game/style3.css">
   </head>
-  <body id="backs">
+  <body>
     
     <div class="topnav">
       <a class="active" href="/index.html">Game</a>
