--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="/Game/antiarnaque.html">Anti Arnaque</a>
       <a href="/Anime/main.html">Animes</a>
     </div>
-    <h3 id="center">L'actu du Gaming</h3>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
+    <h3 id="centre">L'actu du Gaming</h3>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
 
 
     <script src="" async defer></script>
