--- a/Game/bonplans.html
+++ b/Game/bonplans.html
@@ -20,7 +20,10 @@
             <a href="/Game/antiarnaque.html">Anti Arnaque</a>
             <a href="/Anime/main.html">Animes</a>
           </div>
-        
+        <p>Fin des Promotion d'hiver</p>
+        <a href="https://store.epicgames.com/fr/">Epic Games</a>
+        <a href="https://store.epicgames.com/fr/free-games">Jeu Gratuit : Epic Games</a>
+        <a href="https://store.steampowered.com">Steam</a>
         <script src="" async defer></script>
     </body>
 </html>
